added replace block feature

--- a/assets/minecraft/lang/de_de.json
+++ b/assets/minecraft/lang/de_de.json
@@ -10,5 +10,7 @@
   "item.minecraft.iron_hoe": "Feuerstein Hacke",
   "item.minecraft.iron_pickaxe": "Feuerstein Spitzhacke",
   "item.minecraft.iron_shovel": "Feuerstein Schaufel",
-  "item.minecraft.iron_sword": "Feuerstein Schwert"
+  "item.minecraft.iron_sword": "Feuerstein Schwert",
+  "block.minecraft.repeating_command_block": "§fWerkzeug Feuerstein",
+  "item.tear_of_mana.name": "§dTräne aus Mana"
 }
