fixed anvil bug

--- a/assets/minecraft/lang/de_de.json
+++ b/assets/minecraft/lang/de_de.json
@@ -12,5 +12,5 @@
   "item.minecraft.iron_shovel": "Feuerstein Schaufel",
   "item.minecraft.iron_sword": "Feuerstein Schwert",
   "block.minecraft.repeating_command_block": "§fWerkzeug Feuerstein",
-  "item.tear_of_mana.name": "§dTräne aus Mana"
+  "item.tear_of_mana.name": "Träne aus Mana"
 }
